--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chai": "^1.9.0"
   },
   "dependencies": {
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "querystring": "~0.2.0"
   }
 }
