--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "dependencies": {
     "underscore": "~1.8.3",
-    "querystring": "~0.2.0"
+    "querystring": "~0.2.0",
+    "express": "~4.12.3",
+    "fs": "0.0.2",
+    "path": "~0.11.14",
+    "body-parser": "~1.12.2"
   }
 }
